fix(client): 🐛 make select avatar show up correctly in dark mode

--- a/client/src/theme/_smui-theme.scss
+++ b/client/src/theme/_smui-theme.scss
@@ -11,6 +11,10 @@
   $error: color-palette.$red-900
 );
 
+:root {
+  color-scheme: light;
+}
+
 html,
 body {
   background-color: theme.$surface;
